# EA-VT-2A

./: .gitignore  CMakeLists.txt  build.bat  build.sh
.github/workflows/: build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
